force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Requested_Cartridge_Order_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Cartridge_Order_Method__c</fullName>
    <label>Requested Cartridge Order Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CokeSmart</fullName>
            </value>
            <value>
                <fullName>Bottler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>