force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Requested_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Install_Date__c</fullName>
    <label>Requested Install Date</label>
    <type>Date</type>
</CustomField>