force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Requested_Install_Period__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Install_Period__c</fullName>
    <label>Requested Install Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Week of January 1</fullName>
            </value>
            <value>
                <fullName>Week of January 8</fullName>
            </value>
            <value>
                <fullName>Week of January 15</fullName>
            </value>
            <value>
                <fullName>Week of January 22</fullName>
            </value>
            <value>
                <fullName>Week of January 29</fullName>
            </value>
            <value>
                <fullName>Week of February 5</fullName>
            </value>
            <value>
                <fullName>Week of February 12</fullName>
            </value>
            <value>
                <fullName>Week of February 19</fullName>
            </value>
            <value>
                <fullName>Week of February 26</fullName>
            </value>
            <value>
                <fullName>Week of March 5</fullName>
            </value>
            <value>
                <fullName>Week of March 12</fullName>
            </value>
            <value>
                <fullName>Week of March 19</fullName>
            </value>
            <value>
                <fullName>Week of March 26</fullName>
            </value>
            <value>
                <fullName>Week of April 2</fullName>
            </value>
            <value>
                <fullName>Week of April 9</fullName>
            </value>
            <value>
                <fullName>Week of April 16</fullName>
            </value>
            <value>
                <fullName>Week of April 23</fullName>
            </value>
            <value>
                <fullName>Week of April 30</fullName>
            </value>
            <value>
                <fullName>Week of May 7</fullName>
            </value>
            <value>
                <fullName>Week of May 14</fullName>
            </value>
            <value>
                <fullName>Week of May 21</fullName>
            </value>
            <value>
                <fullName>Week of May 28</fullName>
            </value>
            <value>
                <fullName>Week of June 4</fullName>
            </value>
            <value>
                <fullName>Week of June 11</fullName>
            </value>
            <value>
                <fullName>Week of June 18</fullName>
            </value>
            <value>
                <fullName>Week of June 25</fullName>
            </value>
            <value>
                <fullName>Week of July 2</fullName>
            </value>
            <value>
                <fullName>Week of July 9</fullName>
            </value>
            <value>
                <fullName>Week of July 16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>