force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Requested_Order_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Order_Method__c</fullName>
    <defaultValue>&#39;VMS&#39;</defaultValue>
    <label>Requested Order Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>