force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Requested_Site_Assessment_Comp_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Site_Assessment_Comp_Date__c</fullName>
    <label>SA - Completion by Date</label>
    <type>Date</type>
</CustomField>