force-app/main/default/objects/FS_Customer_Input__c/fields/FS_SA_Contact_Preferred_Mode_Communi__c.field-meta.xml
<CustomField>
    <fullName>FS_SA_Contact_Preferred_Mode_Communi__c</fullName>
    <label>SA Contact Preferred Mode Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>