force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Scndry_Site_Assmnt_Cnct_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Scndry_Site_Assmnt_Cnct_name__c</fullName>
    <label>Secondary Site Assessment Contact name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>