force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Scndry_Site_Assmnt_cnct_ofc__c.field-meta.xml
<CustomField>
    <fullName>FS_Scndry_Site_Assmnt_cnct_ofc__c</fullName>
    <label>Secondary Site Assessment contact(ofc)</label>
    <type>Phone</type>
</CustomField>