force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Sec_Site_Assessment_Cnct_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Sec_Site_Assessment_Cnct_Email__c</fullName>
    <label>Secondary Site Assessment Contact Ema</label>
    <type>Email</type>
</CustomField>