force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Sec_Site_Assessment_Cnct_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Sec_Site_Assessment_Cnct_Title__c</fullName>
    <label>Secondary Site Assessment Contact Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Manager</fullName>
            </value>
            <value>
                <fullName>Director Ops</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Store Employee</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Store Owner</fullName>
            </value>
            <value>
                <fullName>VP Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>