force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Secondary_Contractor_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Secondary_Contractor_Contact__c</fullName>
    <label>Secondary Contractor Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Same As Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>