force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Secondary_Contractor_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Secondary_Contractor_Contact_Name__c</fullName>
    <label>Secondary Contractor Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>