force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Secondary_Contractor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Secondary_Contractor_Contact_Phone__c</fullName>
    <label>Secondary Contractor Contact Phone #</label>
    <type>Phone</type>
</CustomField>