force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Select_designation_for_OB_Packet__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_designation_for_OB_Packet__c</fullName>
    <label>Select designation for OB Packet?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outlet</fullName>
                <default>true</default>
                <label>Outlet</label>
            </value>
            <value>
                <fullName>Other address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>