force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Select_On_Boarding_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_On_Boarding_Start_Time__c</fullName>
    <label>Select On-Boarding - Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_OB_Trainer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>6:30 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:30 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>8:30 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:30 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>2:30 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>3:30 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>4:30 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>5:30 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
            <value>
                <fullName>6:30 PM</fullName>
            </value>
            <value>
                <fullName>7:00 PM</fullName>
            </value>
            <value>
                <fullName>7:30 PM</fullName>
            </value>
            <value>
                <fullName>8:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>