force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Select_OnBoard_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_OnBoard_Contact__c</fullName>
    <label>Select OnBoard Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>