force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Select_provider_for_OB_Packet__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_provider_for_OB_Packet__c</fullName>
    <label>Select provider for OB Packet?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artemis</fullName>
                <default>true</default>
                <label>Artemis</label>
            </value>
            <value>
                <fullName>Account Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>