force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Select_Secondary_Site_Assessment_Cont__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_Secondary_Site_Assessment_Cont__c</fullName>
    <label>Select Secondary Site Assessment Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>