force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Self_Serve_Ice_Fill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Ice_Fill_Requirements__c</fullName>
    <label>Indicated Ice Fill Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual FIll</fullName>
            </value>
            <value>
                <fullName>Top Mount Ice Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>