force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Self_Serve_Top_Mnt_Ice_Maker_Instld__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Top_Mnt_Ice_Maker_Instld__c</fullName>
    <inlineHelpText>9000 series</inlineHelpText>
    <label>#Planned Top-Mount Ice Maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>