force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Self_Srv_Top_Mnt_Ice_maker_Mdl_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Srv_Top_Mnt_Ice_maker_Mdl_no__c</fullName>
    <label>IM Model</label>
    <length>48</length>
    <type>Text</type>
</CustomField>