force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Ship_Conf_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Ship_Conf_Contact_Name__c</fullName>
    <label>Ship Conf. Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>