force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Ship_to_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Ship_to_City__c</fullName>
    <label>Ship-to-City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>