force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Ship_to_Zip__c.field-meta.xml
<CustomField>
    <fullName>FS_Ship_to_Zip__c</fullName>
    <label>Ship-to Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>