force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Site_Assessment_contact_email__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessment_contact_email__c</fullName>
    <label>Site Assessment contact email</label>
    <type>Email</type>
</CustomField>