force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Site_Assessment_Contact_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessment_Contact_name__c</fullName>
    <label>Site Assessment Contact name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>