force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Site_Assessment_Contact_Titel__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessment_Contact_Titel__c</fullName>
    <label>Site Assessment Contact Titel</label>
    <length>32</length>
    <type>Text</type>
</CustomField>