force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Standard_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_Email_Address__c</fullName>
    <label>Standard Email Address</label>
    <type>Email</type>
</CustomField>