force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Standard_User_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_User_Email__c</fullName>
    <label>Standard User Email</label>
    <type>Email</type>
</CustomField>