force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Standard_User_Function__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_User_Function__c</fullName>
    <label>Standard User Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store Owner</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Store Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>