force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Standard_User_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_User_Name__c</fullName>
    <label>Standard User Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>