force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Standard_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_User_Phone__c</fullName>
    <label>Standard User Phone</label>
    <type>Phone</type>
</CustomField>