force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Store_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional Freestyle Install</fullName>
            </value>
            <value>
                <fullName>New Store (AM Install)</fullName>
            </value>
            <value>
                <fullName>New Store (PM Install)</fullName>
            </value>
            <value>
                <fullName>Remodel (AM Install)</fullName>
            </value>
            <value>
                <fullName>Remodel (PM Install)</fullName>
            </value>
            <value>
                <fullName>T5 Traditional Freestyle</fullName>
            </value>
            <value>
                <fullName>T1 New Restaurant or ITP</fullName>
            </value>
            <value>
                <fullName>T2 Scrape or ITP Remodel</fullName>
            </value>
            <value>
                <fullName>T4 Dining Room Remodel</fullName>
            </value>
            <value>
                <fullName>T3 Drink Station Remodel</fullName>
            </value>
            <value>
                <fullName>Dry Outlet</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Brick &amp; Mortar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>