force-app/main/default/objects/FS_Customer_Input__c/fields/FS_SwitchingFromCompetitorToCocaCola__c.field-meta.xml
<CustomField>
    <fullName>FS_SwitchingFromCompetitorToCocaCola__c</fullName>
    <label>Switching from competitor to Coca-Cola</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>