force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Team_co_req_Ice_maker_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Team_co_req_Ice_maker_Installation__c</fullName>
    <label>Team co. req. Ice maker Installation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>