force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Template_Type__c</fullName>
    <description>Displays Template Type on HQ records</description>
    <formula>TEXT(FS_Customer_Input_Type__r.FS_Template_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Type</label>
    <type>Text</type>
</CustomField>