force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Top_off_feature_on_for_carbnated_prod__c.field-meta.xml
<CustomField>
    <fullName>FS_Top_off_feature_on_for_carbnated_prod__c</fullName>
    <label>Top-off feature on for carbonated prod?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>