force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Total_Prior_year_VPO_w_DP_DDP__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Prior_year_VPO_w_DP_DDP__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Prior year VPO w/DP-DDP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>