force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Water_Button__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Button__c</fullName>
    <label>Select Water Button Option(8000 Series)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>