force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Water_Filter_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Contact_Email__c</fullName>
    <label>Water Filter Outlet Contact Email</label>
    <type>Email</type>
</CustomField>