force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Water_Filter_MFG__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_MFG__c</fullName>
    <label>Provide current Water Filter Mfg</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3M/Cuno</fullName>
            </value>
            <value>
                <fullName>AJ Antunes</fullName>
            </value>
            <value>
                <fullName>Ecolab</fullName>
            </value>
            <value>
                <fullName>Everpure</fullName>
            </value>
            <value>
                <fullName>Selecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>