force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Water_Filter_Model_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Model_no__c</fullName>
    <label>Provide current Water Filter Model#</label>
    <length>48</length>
    <type>Text</type>
</CustomField>