force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Water_Filter_Supplier_9000__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Supplier_9000__c</fullName>
    <label>Water Filter Supplier (9000 Series)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3M/Cuno</fullName>
            </value>
            <value>
                <fullName>AJ Antunes</fullName>
            </value>
            <value>
                <fullName>Ecolab</fullName>
            </value>
            <value>
                <fullName>Everpure</fullName>
            </value>
            <value>
                <fullName>Selecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>